--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "typescript": "^5.5.2"
